2006-01-23  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/lame/gstlame.c: (add_one_tag):
	  Fix handling of GST_TAG_DATE (#311679), don't pass an
	  uninitialised string pointer to lame if we don't know
	  how to handle the tag type, and fix minor memory leak.

2006-01-23  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mad/gstmad.c: (gst_mad_chain):
	  Fix debug message.

2006-01-22  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstmpegparse.c (gst_mpeg_parse_process_event): 
	Erase spurious call to gst_segment_set_newsegment.
	* gst/mpegstream/gstdvddemux.c (gst_dvd_demux_process_event): Call
	the superclass method when handling NEWSEGMENT events.
	(gst_dvd_demux_handle_dvd_event): Get rid of dvd-audio-shutdown
	and dvd-audio-restart event handling. There are currently less
	hackish ways of handling the sparse audio stream problem.

2006-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/dvdnav/dvdnavsrc.c: (if):
	* ext/dvdread/stream_labels.c:
	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_process_segment):
	* gst/realmedia/rmdemux.c: (gst_rmdemux_loop):
	  fix up error domains, error strings, and use of translation
	* po/POTFILES.in:
	  fix up this file, even though none of them are actually marked
	  for build yet.

2006-01-19  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstmpegparse.h (struct _GstMPEGParse): 
	* gst/mpegstream/gstmpegparse.c (gst_mpeg_parse_reset) 
	(gst_mpeg_parse_process_event, gst_mpeg_parse_parse_packhead) 
	(gst_mpeg_parse_change_state): 
	Make timestamp adjustment somewhat milder. Actual timestamps are
	now sent unmodified unless an actual gap is found in the
	stream. This should fix time display when playing most MPEG
	files.

2006-01-18  Edward Hervey  <edward@fluendo.com>

	* gst/mpegstream/gstmpegdemux.c: (gst_mpeg_demux_send_subbuffer): 
	tss tss... always set caps on outgoing buffer.

2006-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>
